added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -18,7 +19,6 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML notes here</li>
           <li>The head elements contains information about the webpage.</li>
           <li> the body elementts represent the visible content shown to the user. </li>
         </ul>
@@ -27,14 +27,14 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
      <ul>
-       <li>Enter your CSS notes here</li>
+       <li>A margin idicates how much space we want around the outside of an element</li>
+       <li>A paddinbg indicates how much space we wnat around teh content inside an element.</li>
      </ul>
       </section>
    
       <section class="card" id="git-section">
         <h2>Git</h2>
      <ul>
-       <li>Enter your git notes here</li>
        <li> git allows you and a partner to work on a project without overlapping</li>
        <li> git keeps all the versions on the webpage to refer to</li>
        <li>git status: checks what branch we are currently on</li>
